tests/errors/lexical/unterminated_comment/source.wren
import "ifj25" for Ifj
class Program {
    static main() {
        /* this is an unterminated comment
    }
}
